chore: refine percy experience

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -32,6 +32,8 @@ overrides:
   - files: ['*.percy.js']
     env:
       'react-percy/globals': true
+    rules:
+      'import/no-unresolved': [2, { ignore: ['\/dist\/ui-kit\.esm'] }]
 settings:
   import/ignore:
     # included by default, but replaced if explicitly configured
@@ -40,7 +42,7 @@ settings:
     # tests can do `import { render, fireEvent }` from '../test-utils'`.
     # Because we export the whole namespace, the `import/ignore` rule can't find
     # the named exports. So we disable the rule for imports of that file.
-    - test-utils.js  
+    - test-utils.js
   react:
     pragma: React
     version: detect
