--- a/package.json
+++ b/package.json
@@ -65,9 +65,6 @@
     "common-tags": "1.8.0",
     "dom-helpers": "3.4.0",
     "downshift": "3.1.5",
-    "classnames": "2.2.6",
-    "common-tags": "1.8.0",
-    "dom-helpers": "3.4.0",
     "flatpickr": "4.5.2",
     "is-touch-device": "1.0.1",
     "lodash.flatmap": "4.5.0",
@@ -81,50 +78,50 @@
     "prop-types": "15.6.2",
     "react-required-if": "1.0.3",
     "react-select": "2.1.2",
-    "react-textarea-autosize": "7.1.0-1",
+    "react-textarea-autosize": "7.1.0",
     "react-virtualized": "9.21.0",
     "recompose": "0.30.0",
     "tiny-invariant": "1.0.3",
     "warning": "4.0.2"
   },
   "devDependencies": {
-    "@babel/core": "7.1.6",
-    "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/plugin-proposal-do-expressions": "7.0.0",
-    "@babel/plugin-proposal-export-default-from": "7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "7.0.0",
-    "@babel/plugin-transform-destructuring": "7.1.3",
-    "@babel/plugin-transform-react-constant-elements": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.1.0",
-    "@babel/preset-env": "7.1.6",
+    "@babel/core": "7.2.0",
+    "@babel/plugin-proposal-class-properties": "7.2.1",
+    "@babel/plugin-proposal-do-expressions": "7.2.0",
+    "@babel/plugin-proposal-export-default-from": "7.2.0",
+    "@babel/plugin-proposal-export-namespace-from": "7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/plugin-proposal-optional-chaining": "7.2.0",
+    "@babel/plugin-transform-destructuring": "7.2.0",
+    "@babel/plugin-transform-react-constant-elements": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.2.0",
+    "@babel/preset-env": "7.2.0",
     "@babel/preset-react": "7.0.0",
     "@commercetools/enzyme-extensions": "3.0.1",
     "@commercetools/jest-enzyme-matchers": "1.1.2",
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
     "@percy/react": "0.4.6",
-    "@storybook/addon-actions": "4.0.9",
-    "@storybook/addon-info": "4.0.9",
-    "@storybook/addon-knobs": "4.0.9",
-    "@storybook/addon-links": "4.0.9",
-    "@storybook/addon-options": "4.0.8",
-    "@storybook/react": "4.0.9",
+    "@storybook/addon-actions": "4.0.12",
+    "@storybook/addon-info": "4.0.12",
+    "@storybook/addon-knobs": "4.0.12",
+    "@storybook/addon-links": "4.0.12",
+    "@storybook/addon-options": "4.0.12",
+    "@storybook/react": "4.0.12",
     "@svgr/rollup": "4.1.0",
     "@svgr/webpack": "4.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
-    "babel-plugin-emotion": "10.0.0",
+    "babel-plugin-emotion": "10.0.4",
     "babel-plugin-module-rewrite": "0.2.0",
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-transform-dynamic-import": "2.1.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.20",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.21",
     "babel-preset-jest": "23.2.0",
     "browserslist": "4.3.5",
-    "colors": "1.3.2",
+    "colors": "1.3.3",
     "common-tags": "1.8.0",
     "conventional-changelog-cli": "2.0.11",
     "cross-env": "5.2.0",
@@ -132,19 +129,19 @@
     "css-loader": "1.0.1",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.7.0",
-    "enzyme-to-json": "3.3.4",
-    "eslint": "5.9.0",
+    "enzyme-to-json": "3.3.5",
+    "eslint": "5.10.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "3.3.0",
     "eslint-formatter-pretty": "2.0.0",
     "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jest": "22.1.0",
+    "eslint-plugin-jest": "22.1.2",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prefer-object-spread": "1.2.1",
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
     "eslint-plugin-react-percy": "0.2.4",
-    "formik": "1.3.2",
+    "formik": "1.4.0",
     "glob": "7.1.3",
     "graphql": "14.0.2",
     "graphql-tag": "2.10.0",
@@ -153,7 +150,7 @@
     "husky": "1.2.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
-    "jest-dom": "2.1.1",
+    "jest-dom": "3.0.0",
     "jest-enzyme": "7.0.1",
     "jest-localstorage-mock": "2.3.0",
     "jest-plugin-filename": "0.0.1",
@@ -189,16 +186,16 @@
     "react-dom": "16.6.3",
     "react-intl": "2.7.2",
     "react-router-dom": "4.3.1",
-    "react-testing-library": "5.3.1",
+    "react-testing-library": "5.3.2",
     "react-value": "0.2.0",
     "rimraf": "2.6.2",
-    "rollup": "0.67.3",
+    "rollup": "0.67.4",
     "rollup-plugin-babel": "4.0.3",
     "rollup-plugin-cleanup": "3.0.0",
     "rollup-plugin-commonjs": "9.2.0",
     "rollup-plugin-json": "3.1.0",
     "rollup-plugin-node-builtins": "2.1.2",
-    "rollup-plugin-node-resolve": "3.4.0",
+    "rollup-plugin-node-resolve": "4.0.0",
     "rollup-plugin-peer-deps-external": "2.2.0",
     "rollup-plugin-postcss": "1.6.3",
     "rollup-plugin-replace": "2.1.0",
@@ -210,7 +207,7 @@
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "2.0.0",
     "url-loader": "1.1.2",
-    "webpack": "4.26.1",
+    "webpack": "4.27.1",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.10"
   },
