Revert "chore: temporarily disable percy (#343)"
This reverts commit 770161dd245becf5c45e154d2d0e2d4de69e933b.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,7 @@ script:
   - "! test -f fail-tests-because-there-was-an-unhandled-rejection.lock"
   # skip percy builds when this is not a pull request or when it's not master to save precious snaps
   # also skip when PR is opened by `renovate`
-  #
-  # Percy is disabled for now as we ran over the budget for this month.
-  # It should be reenabled once we are moved to the bigger plan, which we
-  # already requested from Percy, or as soon as the new month starts.
-  #- bash ./scripts/run-percy.sh
-  #
+  - bash ./scripts/run-percy.sh
   # back to default in case internal travis scripts return non zero response codes.
   - set +e
 
