--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "glob": "7.1.3",
     "graphql": "14.0.2",
     "graphql-tag": "2.10.0",
+    "history": "4.7.2",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.2.1",
