feat(toggle): add support for id
Also changes the story, removes an outdated children prop and refactors the tests to react-testing-library

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -29,7 +29,7 @@ overrides:
   - files: ['*.spec.js']
     rules:
       'react/display-name': 0
-  - files: ['*.percy.js']
+  - files: ['*.percy.js', 'test/percy/suite.js']
     env:
       'react-percy/globals': true
     rules:
