--- a/package.json
+++ b/package.json
@@ -209,7 +209,8 @@
     "url-loader": "1.1.2",
     "webpack": "4.27.1",
     "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.1.10"
+    "webpack-dev-server": "3.1.10",
+    "yaml-loader": "0.5.0"
   },
   "peerDependencies": {
     "moment": ">2.2",
