--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "build:watch": "rimraf dist && cross-env NODE_ENV=production rollup --config --watch",
     "playground": "webpack-dev-server --config playground/webpack.config.js --watch",
     "vrt-playground:build": "rimraf vrt-examples/dist && NODE_ENV=production webpack -p --config vrt-examples/webpack.config.js",
+    "vrt-playground:serve": "node vrt-examples/server",
+
     "start": "yarn storybook:start",
     "storybook:start": "start-storybook -p 9002 -s docs/assets",
     "docs:publish": "node scripts/publish-docs.js",
@@ -56,7 +58,7 @@
     "test": "jest --config jest.test.config.js",
     "test:watch": "jest --config jest.test.config.js --watch",
     "test:bundle": "jest --config jest.bundle.config.js",
-    "test:percy": "percy exec -- yarn test:visual",
+    "percy": "percy exec -- yarn test:visual",
     "test:visual": "jest --config jest.visual.config.js --maxWorkers=1",
     "test:bundle:watch": "jest --config jest.bundle.config.js --watch"
   },
