--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "build": "rimraf dist && cross-env NODE_ENV=production rollup --config",
     "build:watch": "rimraf dist && cross-env NODE_ENV=production rollup --config --watch",
     "playground": "webpack-dev-server --config playground/webpack.config.js --watch",
-    "vrt-playground:build": "rimraf vrt-examples/dist && NODE_ENV=production webpack -p --config vrt-examples/webpack.config.js",
+    "vrt-playground:build": "rimraf vrt-examples/dist && NODE_ENV=production webpack --config vrt-examples/webpack.config.js",
     "vrt-playground:serve": "node vrt-examples/server",
     "start": "yarn storybook:start",
     "storybook:start": "start-storybook -p 9002 -s docs/assets",
