--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -34,6 +34,7 @@ overrides:
   - files: ['*.visualspec.js']
     globals:
         page: true
+        HOST: true
 settings:
   import/ignore:
     # included by default, but replaced if explicitly configured
