--- a/package.json
+++ b/package.json
@@ -164,6 +164,7 @@
     "jest-silent-reporter": "0.1.1",
     "jest-validate": "23.6.0",
     "jest-watch-master": "1.0.0",
+    "json-loader": "0.5.7",
     "lint-staged": "8.1.0",
     "lodash.camelcase": "4.3.0",
     "lodash.pick": "4.4.0",
