--- a/package.json
+++ b/package.json
@@ -207,6 +207,7 @@
     "rollup-plugin-postcss": "1.6.3",
     "rollup-plugin-replace": "2.1.0",
     "rollup-plugin-url": "2.1.0",
+    "semver": "5.6.0",
     "shelljs": "0.8.3",
     "storybook-readme": "4.0.2",
     "style-loader": "0.23.1",
