--- a/package.json
+++ b/package.json
@@ -62,12 +62,12 @@
     "visual-testing-app:serve": "node visual-testing-app/server"
   },
   "dependencies": {
-    "@emotion/core": "10.0.5",
-    "@emotion/styled": "10.0.5",
+    "@emotion/core": "10.0.6",
+    "@emotion/styled": "10.0.6",
     "classnames": "2.2.6",
     "common-tags": "1.8.0",
     "dom-helpers": "3.4.0",
-    "downshift": "3.1.7",
+    "downshift": "3.1.10",
     "is-touch-device": "1.0.1",
     "lodash.flatmap": "4.5.0",
     "lodash.has": "4.5.2",
@@ -79,7 +79,7 @@
     "lodash.without": "4.4.0",
     "prop-types": "15.6.2",
     "react-required-if": "1.0.3",
-    "react-select": "2.1.2",
+    "react-select": "2.2.0",
     "react-textarea-autosize": "7.1.0",
     "react-virtualized": "9.21.0",
     "recompose": "0.30.0",
@@ -99,31 +99,31 @@
     "@babel/plugin-transform-runtime": "7.2.0",
     "@babel/preset-env": "7.2.3",
     "@babel/preset-react": "7.0.0",
-    "@commercetools/enzyme-extensions": "3.0.1",
+    "@commercetools/enzyme-extensions": "4.0.0",
     "@commercetools/jest-enzyme-matchers": "1.1.2",
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
-    "@percy/puppeteer": "1.0.0-beta.5",
-    "@storybook/addon-actions": "4.1.2",
-    "@storybook/addon-info": "4.1.2",
-    "@storybook/addon-knobs": "4.1.2",
-    "@storybook/addon-links": "4.1.2",
-    "@storybook/addon-options": "4.1.2",
+    "@percy/puppeteer": "1.0.0",
+    "@storybook/addon-actions": "4.1.4",
+    "@storybook/addon-info": "4.1.4",
+    "@storybook/addon-knobs": "4.1.4",
+    "@storybook/addon-links": "4.1.4",
+    "@storybook/addon-options": "4.1.4",
     "@storybook/addon-storysource": "4.1.4",
-    "@storybook/react": "4.1.2",
+    "@storybook/react": "4.1.4",
     "@svgr/rollup": "4.1.0",
     "@svgr/webpack": "4.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
-    "babel-loader": "8.0.4",
-    "babel-plugin-emotion": "10.0.5",
+    "babel-loader": "8.0.5",
+    "babel-plugin-emotion": "10.0.6",
     "babel-plugin-module-rewrite": "0.2.0",
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-transform-dynamic-import": "2.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.21",
     "babel-preset-jest": "23.2.0",
-    "browserslist": "4.3.6",
+    "browserslist": "4.3.7",
     "colors": "1.3.3",
     "common-tags": "1.8.0",
     "conventional-changelog-cli": "2.0.11",
@@ -133,7 +133,7 @@
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.7.1",
     "enzyme-to-json": "3.3.5",
-    "eslint": "5.11.1",
+    "eslint": "5.12.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "3.3.0",
     "eslint-formatter-pretty": "2.0.0",
@@ -141,10 +141,10 @@
     "eslint-plugin-jest": "22.1.2",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prefer-object-spread": "1.2.1",
-    "eslint-plugin-prettier": "3.0.0",
-    "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-prettier": "3.0.1",
+    "eslint-plugin-react": "7.12.3",
     "express": "4.16.4",
-    "formik": "1.4.1",
+    "formik": "1.4.2",
     "glob": "7.1.3",
     "graphql": "14.0.2",
     "graphql-tag": "2.10.0",
@@ -156,7 +156,7 @@
     "jest": "23.6.0",
     "jest-dom": "3.0.0",
     "jest-enzyme": "7.0.1",
-    "jest-localstorage-mock": "2.3.0",
+    "jest-localstorage-mock": "2.4.0",
     "jest-plugin-filename": "0.0.1",
     "jest-puppeteer": "3.7.0",
     "jest-runner-eslint": "0.7.1",
@@ -184,7 +184,7 @@
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
-    "postcss-reporter": "6.0.0",
+    "postcss-reporter": "6.0.1",
     "postcss-safe-parser": "4.0.1",
     "pptr-testing-library": "0.3.1",
     "prettier": "1.15.3",
@@ -194,12 +194,12 @@
     "react-dom": "16.7.0",
     "react-intl": "2.7.2",
     "react-router-dom": "4.3.1",
-    "react-testing-library": "5.4.2",
+    "react-testing-library": "5.4.4",
     "react-value": "0.2.0",
-    "rimraf": "2.6.2",
-    "rollup": "1.0.0",
-    "rollup-plugin-babel": "4.1.0",
-    "rollup-plugin-cleanup": "3.0.0",
+    "rimraf": "2.6.3",
+    "rollup": "1.0.2",
+    "rollup-plugin-babel": "4.2.0",
+    "rollup-plugin-cleanup": "3.1.0",
     "rollup-plugin-commonjs": "9.2.0",
     "rollup-plugin-json": "3.1.0",
     "rollup-plugin-node-builtins": "2.1.2",
@@ -215,10 +215,10 @@
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "2.0.0",
     "url-loader": "1.1.2",
-    "webpack": "4.27.1",
-    "webpack-cli": "3.1.2",
+    "webpack": "4.28.3",
+    "webpack-cli": "3.2.1",
     "webpack-dev-server": "3.1.14",
-    "yaml": "1.1.0",
+    "yaml": "1.2.0",
     "yaml-loader": "0.5.0"
   },
   "peerDependencies": {
