--- a/package.json
+++ b/package.json
@@ -58,15 +58,19 @@
     "test:bundle:watch": "jest --config jest.bundle.config.js --watch",
     "percy": "percy exec -- jest --config jest.visual.config.js --runInBand",
     "visual-testing-app:build": "rimraf visual-testing-app/dist && NODE_ENV=production webpack --config visual-testing-app/webpack.config.js",
-    "visual-testing-app:serve": "node visual-testing-app/server"
+    "visual-testing-app:serve": "node visual-testing-app/server",
+    "html-sketchapp-install": "html-sketchapp install",
+    "html-sketchapp": "html-sketchapp --url http://localhost:3001/sketch --out-dir sketch-export"
   },
   "dependencies": {
+    "@brainly/html-sketchapp": "4.1.0",
     "@emotion/core": "10.0.6",
     "@emotion/styled": "10.0.6",
     "classnames": "2.2.6",
     "common-tags": "1.8.0",
     "dom-helpers": "3.4.0",
     "downshift": "3.1.10",
+    "html-sketchapp-cli": "0.6.2",
     "is-touch-device": "1.0.1",
     "lodash.flatmap": "4.5.0",
     "lodash.has": "4.5.2",
