--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   ],
   "scripts": {
     "changelog": "conventional-changelog -p angular -u",
-    "prebuild": "node ./scripts/generate-icon-exports.js && node ./scripts/generate-custom-properties.js",
+    "prebuild": "rimraf ./dist && node ./scripts/generate-icon-exports.js && node ./scripts/generate-custom-properties.js",
     "prestorybook:start": "node ./scripts/generate-icon-exports.js && node ./scripts/generate-custom-properties.js",
     "storybook:build": "build-storybook -o .public -s docs/assets",
     "build": "rimraf dist && cross-env NODE_ENV=production rollup --config",
@@ -145,6 +145,8 @@
     "eslint-plugin-react": "7.12.3",
     "formik": "1.4.2",
     "glob": "7.1.3",
+    "graphql": "14.0.2",
+    "graphql-tag": "2.10.0",
     "history": "4.7.2",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
@@ -173,12 +175,16 @@
     "omit-empty": "1.0.0",
     "pegjs": "0.10.0",
     "postcss": "7.0.11",
+    "postcss-color-mod-function": "3.0.3",
+    "postcss-css-variables": "0.11.0",
+    "postcss-custom-media": "7.0.7",
     "postcss-custom-properties": "8.0.9",
     "postcss-discard-comments": "4.0.1",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "postcss-reporter": "6.0.1",
+    "postcss-safe-parser": "4.0.1",
     "pptr-testing-library": "0.3.1",
     "prettier": "1.15.3",
     "puppeteer": "1.11.0",
@@ -197,7 +203,6 @@
     "rollup-plugin-json": "3.1.0",
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-node-resolve": "4.0.0",
-    "rollup-plugin-peer-deps-external": "2.2.0",
     "rollup-plugin-postcss": "1.6.3",
     "rollup-plugin-replace": "2.1.0",
     "rollup-plugin-url": "2.1.0",
