--- a/package.json
+++ b/package.json
@@ -57,8 +57,9 @@
     "test:bundle": "jest --config jest.bundle.config.js",
     "test:bundle:watch": "jest --config jest.bundle.config.js --watch",
     "percy": "percy exec -- jest --config jest.visual.config.js --runInBand",
-    "visual-testing-app:build": "rimraf visual-testing-app/dist && NODE_ENV=production webpack --config visual-testing-app/webpack.config.js",
-    "visual-testing-app:serve": "node visual-testing-app/server"
+    "visual-testing-app:build": "NODE_ENV=production webpack --config visual-testing-app/webpack.config.js",
+    "visual-testing-app:build:watch": "NODE_ENV=production webpack --config visual-testing-app/webpack.config.js --watch",
+    "visual-testing-app:serve": "serve visual-testing-app/dist --no-clipboard --single --listen 3001"
   },
   "dependencies": {
     "@emotion/core": "10.0.6",
@@ -123,6 +124,7 @@
     "babel-plugin-transform-react-remove-prop-types": "0.4.21",
     "babel-preset-jest": "23.2.0",
     "browserslist": "4.4.0",
+    "clean-webpack-plugin": "1.0.0",
     "colors": "1.3.3",
     "common-tags": "1.8.0",
     "conventional-changelog-cli": "2.0.11",
@@ -207,6 +209,7 @@
     "rollup-plugin-postcss": "1.6.3",
     "rollup-plugin-replace": "2.1.0",
     "rollup-plugin-url": "2.1.0",
+    "serve": "10.1.1",
     "shelljs": "0.8.3",
     "storybook-readme": "4.0.5",
     "style-loader": "0.23.1",
