--- a/.gitignore
+++ b/.gitignore
@@ -81,9 +81,11 @@ typings/
 .vscode
 !.vscode/settings.json
 
-
 # File used to fail tests on CI
 fail-tests-because-there-was-an-unhandled-rejection.lock
 
 # percy.io
 .percy-debug
+
+# Typescript
+compiled
