--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "main": "dist/ui-kit.cjs.js",
   "module": "dist/ui-kit.esm.js",
+  "typings": "dist/index.d.ts",
   "files": [
     "dist",
     "i18n",
-    "images",
     "materials/custom-properties.css",
     "materials/custom-properties.json",
     "materials/media-queries.mod.css",
@@ -41,7 +41,7 @@
     "prebuild": "node ./scripts/generate-icon-exports.js && yarn design-tokens:build",
     "prestorybook:start": "node ./scripts/generate-icon-exports.js && node ./scripts/generate-custom-properties.js",
     "storybook:build": "build-storybook -o .public -s docs/assets",
-    "build": "rimraf dist && cross-env NODE_ENV=production rollup --config",
+    "build": "rimraf dist && cross-env NODE_ENV=production tsc && NODE_ENV=production rollup --config",
     "build:watch": "rimraf dist && cross-env NODE_ENV=production rollup --config --watch",
     "start": "yarn storybook:start",
     "storybook:start": "start-storybook -p 9002 -s docs/assets",
@@ -112,6 +112,11 @@
     "@storybook/react": "4.1.7",
     "@svgr/rollup": "4.1.0",
     "@svgr/webpack": "4.1.0",
+    "@types/jest": "23.3.13",
+    "@types/node": "10.12.18",
+    "@types/react": "16.7.20",
+    "@types/react-dom": "16.0.11",
+    "awesome-typescript-loader": "5.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
@@ -210,6 +215,7 @@
     "stylelint": "9.10.1",
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "2.0.0",
+    "typescript": "3.2.4",
     "url-loader": "1.1.2",
     "webpack": "4.29.0",
     "webpack-cli": "3.2.1",
