--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,9 @@
     "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
     "jsx": "react",                        /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
-    "declaration": true,                   /* Generates corresponding '.d.ts' file. */
-    "declarationDir": "dist",
+    // NOTE: enable declaration once we can disable "allowJs"
+    // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
+    // "declarationDir": "dist",
     // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
     "sourceMap": true,                     /* Generates corresponding '.map' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
