--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "prebuild": "node ./scripts/generate-icon-exports.js && yarn design-tokens:build",
     "prestorybook:start": "node ./scripts/generate-icon-exports.js && node ./scripts/generate-custom-properties.js",
     "storybook:build": "build-storybook -o .public -s docs/assets",
-    "build": "rimraf dist && cross-env NODE_ENV=production tsc && NODE_ENV=production rollup --config",
+    "build": "rimraf dist && cross-env NODE_ENV=production rollup --config",
     "build:watch": "rimraf dist && cross-env NODE_ENV=production rollup --config --watch",
     "start": "yarn storybook:start",
     "storybook:start": "start-storybook -p 9002 -s docs/assets",
@@ -207,6 +207,7 @@
     "rollup-plugin-node-resolve": "4.0.0",
     "rollup-plugin-postcss": "1.6.3",
     "rollup-plugin-replace": "2.1.0",
+    "rollup-plugin-typescript": "1.0.0",
     "rollup-plugin-url": "2.1.0",
     "serve": "10.1.1",
     "shelljs": "0.8.3",
@@ -215,6 +216,7 @@
     "stylelint": "9.10.1",
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "2.0.0",
+    "tslib": "1.9.3",
     "typescript": "3.2.4",
     "url-loader": "1.1.2",
     "webpack": "4.29.0",
