--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "design-tokens:build": "node ./scripts/generate-custom-properties.js",
     "design-tokens:build:watch": "nodemon -e yaml --quiet --watch materials/internals --exec 'yarn design-tokens:build'",
     "prebuild": "node ./scripts/generate-icon-exports.js && yarn design-tokens:build",
+    "postbuild": "tsc -d --emitDeclarationOnly --allowJs false --declarationDir dist",
     "prestorybook:start": "node ./scripts/generate-icon-exports.js && node ./scripts/generate-custom-properties.js",
     "storybook:build": "build-storybook -o .public -s docs/assets",
-    "build": "rimraf dist && cross-env NODE_ENV=production rollup --config",
-    "build:watch": "rimraf dist && cross-env NODE_ENV=production rollup --config --watch",
+    "build": "cross-env NODE_ENV=production rollup --config",
+    "build:watch": "cross-env NODE_ENV=production rollup --config --watch",
     "start": "yarn storybook:start",
     "storybook:start": "start-storybook -p 9002 -s docs/assets",
     "docs:publish": "node scripts/publish-docs.js",
@@ -112,10 +113,15 @@
     "@storybook/react": "4.1.7",
     "@svgr/rollup": "4.1.0",
     "@svgr/webpack": "4.1.0",
+    "@types/classnames": "2.2.7",
+    "@types/enzyme": "3.1.15",
+    "@types/enzyme-adapter-react-16": "1.0.3",
     "@types/jest": "23.3.13",
     "@types/node": "10.12.18",
+    "@types/prop-types": "15.5.8",
     "@types/react": "16.7.20",
     "@types/react-dom": "16.0.11",
+    "@wessberg/rollup-plugin-ts": "1.1.18",
     "awesome-typescript-loader": "5.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
@@ -207,7 +213,6 @@
     "rollup-plugin-node-resolve": "4.0.0",
     "rollup-plugin-postcss": "1.6.3",
     "rollup-plugin-replace": "2.1.0",
-    "rollup-plugin-typescript": "1.0.0",
     "rollup-plugin-url": "2.1.0",
     "serve": "10.1.1",
     "shelljs": "0.8.3",
@@ -216,6 +221,7 @@
     "stylelint": "9.10.1",
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "2.0.0",
+    "ts-jest": "23.10.5",
     "tslib": "1.9.3",
     "typescript": "3.2.4",
     "url-loader": "1.1.2",
