--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,12 @@
 {
-  "include": ["src", "./typings.d.ts", "types"],
+  "include": ["materials", "src", "types"],
   "exclude": [
     ".public",
     ".storybook",
-    "compiled",
     "dist",
     "docs",
     "examples",
     "i18n",
-    "materials",
     "node_modules",
     "philosophy",
     "scripts",
@@ -27,9 +25,9 @@
     // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
     // "declarationDir": "dist",
     // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
-    "sourceMap": true,                     /* Generates corresponding '.map' file. */
+    // "sourceMap": true,                     /* Generates corresponding '.map' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
-    "outDir": "compiled",                  /* Redirect output structure to the directory. */
+    // "outDir": "dist",                      /* Redirect output structure to the directory. */
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     "pretty": true,
     // "composite": true,                     /* Enable project compilation */
@@ -63,7 +61,8 @@
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     // "types": [],                           /* Type declaration files to be included in compilation. */
     "allowSyntheticDefaultImports": true,   /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
-    "esModuleInterop": true                   /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+    "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+    "resolveJsonModule": true,              /* Imports, extracts types from and generates `.json` files. */
     // "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
 
     /* Source Map Options */
