--- a/package.json
+++ b/package.json
@@ -118,11 +118,14 @@
     "@types/classnames": "2.2.7",
     "@types/enzyme": "3.1.15",
     "@types/enzyme-adapter-react-16": "1.0.3",
+    "@types/history": "4.7.2",
     "@types/jest": "23.3.13",
     "@types/node": "10.12.18",
     "@types/prop-types": "15.5.8",
     "@types/react": "16.7.20",
     "@types/react-dom": "16.0.11",
+    "@types/react-intl": "2.3.15",
+    "@types/react-router-dom": "4.3.1",
     "@wessberg/rollup-plugin-ts": "1.1.18",
     "awesome-typescript-loader": "5.2.1",
     "babel-core": "7.0.0-bridge.0",
