--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   ],
   "scripts": {
     "changelog": "conventional-changelog -p angular -u",
+    "bs:build": "export BS_CMT_POST_PROCESS_CMD=\"gentype\" && bsb -make-world",
+    "bs:start": "export BS_CMT_POST_PROCESS_CMD=\"gentype\" && bsb -make-world -w",
+    "bs:clean": "bsb -clean-world",
     "design-tokens:build": "node ./scripts/generate-custom-properties.js",
     "design-tokens:build:watch": "nodemon -e yaml --quiet --watch materials/internals --exec 'yarn design-tokens:build'",
     "prebuild": "node ./scripts/generate-icon-exports.js && yarn design-tokens:build",
@@ -124,6 +127,8 @@
     "babel-plugin-transform-react-remove-prop-types": "0.4.23",
     "babel-preset-jest": "23.2.0",
     "browserslist": "4.4.1",
+    "bs-css": "8.0.0",
+    "bs-platform": "4.0.18",
     "clean-webpack-plugin": "1.0.0",
     "colors": "1.3.3",
     "common-tags": "1.8.0",
@@ -145,6 +150,7 @@
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
     "formik": "1.4.2",
+    "gentype": "2.4.1",
     "glob": "7.1.3",
     "history": "4.7.2",
     "html-loader": "0.5.5",
@@ -194,9 +200,11 @@
     "react-router-dom": "4.3.1",
     "react-testing-library": "5.4.4",
     "react-value": "0.2.0",
+    "reason-react": "0.5.3",
     "rimraf": "2.6.3",
     "rollup": "1.1.1",
     "rollup-plugin-babel": "4.3.2",
+    "rollup-plugin-bucklescript": "0.7.0",
     "rollup-plugin-cleanup": "3.1.1",
     "rollup-plugin-commonjs": "9.2.0",
     "rollup-plugin-json": "3.1.0",
