feat: add tsc to perform typechecks

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lint": "jest --projects jest.tslint.config.js jest.stylelint.config.js",
     "lint:js": "jest --config jest.tslint.config.js",
     "lint:css": "jest --config jest.stylelint.config.js",
+    "type-check": "tsc",
     "format:js": "prettier --write '**/*.js'",
     "format:css": "prettier --write --parser css '**/*.css'",
     "format:md": "prettier --write --parser markdown '**/*.md'",
@@ -219,6 +220,7 @@
     "tslint-config-prettier": "1.17.0",
     "tslint-eslint-rules": "5.4.0",
     "tslint-react": "3.6.0",
+    "typescript": "3.2.4",
     "url-loader": "1.1.2",
     "webpack": "4.29.0",
     "webpack-cli": "3.2.1",
