--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "lint": "jest --projects jest.tslint.config.js jest.stylelint.config.js",
     "lint:js": "jest --config jest.tslint.config.js",
     "lint:css": "jest --config jest.stylelint.config.js",
-    "type-check": "tsc",
+    "type-check": "yarn type-check:ts",
+    "type-check:ts": "tsc",
     "format:js": "prettier --write '**/*.js'",
     "format:css": "prettier --write --parser css '**/*.css'",
     "format:md": "prettier --write --parser markdown '**/*.md'",
