refactor: to use `@babel/preset-typescript` for TypeScript transpilation (#457)
#### Summary

This pull request suggests/evaluates using the `@babel/preset-typescript` to compile out TypeScript.

#### Description

`@babel/preset-typescript` comes with most of (not all) TypeScript features to be compiled away. Generally, "How does Babel handle TypeScript code? It removes it". It supports most features. I only know that it does not not support namespaces or const enums because those require type information to transpile. Also does not support export = and import =, because those cannot be transpiled to ESM. I would argue that this could be fine as the initial step. Furthermore, babel is known to be faster than tsc (totally polemic argument though given the size of this code base).

If we would want to go this way we should add an `yarn type-check` script that invokes the TypeScript compiler. As this changes the workflow a bit - allowing easier experimentation - as you write code, you save, and it compiles (very quickly) without checking for type safety just yet.

1. Generally I like that we say within babel for both webpack and rollup. 
   - It's not like we sent our files through TS and then Babel. 
2. We can continue to use any JavaScript proposal and syntax we like (requires some thought)
   - Do we use `private` or `#instanceVar`?
   - do expressions could be a thing (not that they should)

--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "lint": "jest --projects jest.tslint.config.js jest.stylelint.config.js",
     "lint:js": "jest --config jest.tslint.config.js",
     "lint:css": "jest --config jest.stylelint.config.js",
+    "type-check": "yarn type-check:ts",
+    "type-check:ts": "tsc",
     "format:js": "prettier --write '**/*.js'",
     "format:css": "prettier --write --parser css '**/*.css'",
     "format:md": "prettier --write --parser markdown '**/*.md'",
@@ -91,14 +93,15 @@
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
-    "@babel/plugin-proposal-class-properties": "7.2.3",
+    "@babel/plugin-proposal-class-properties": "7.3.0",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.3.1",
     "@babel/plugin-transform-destructuring": "7.2.0",
     "@babel/plugin-transform-react-constant-elements": "7.2.0",
     "@babel/plugin-transform-runtime": "7.2.0",
-    "@babel/preset-env": "7.2.3",
+    "@babel/preset-env": "7.3.1",
+    "@babel/preset-typescript": "7.1.0",
     "@babel/preset-react": "7.0.0",
     "@commercetools/enzyme-extensions": "4.0.0",
     "@commercetools/jest-enzyme-matchers": "1.1.2",
@@ -127,7 +130,6 @@
     "@types/react-intl": "2.3.15",
     "@types/react-router-dom": "4.3.1",
     "@wessberg/rollup-plugin-ts": "1.1.18",
-    "awesome-typescript-loader": "5.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.5",
