chore: drop postcss plugins

--- a/package.json
+++ b/package.json
@@ -47,9 +47,8 @@
     "storybook:start": "start-storybook -p 9002 -s docs/assets",
     "docs:publish": "node scripts/publish-docs.js",
     "i18n:build": "node scripts/extract-intl.js --output-path=$(pwd)/i18n 'src/components/**/!(*.spec).js'",
-    "lint": "jest --projects jest.eslint.config.js jest.stylelint.config.js",
+    "lint": "jest --projects jest.eslint.config.js",
     "lint:js": "jest --config jest.eslint.config.js",
-    "lint:css": "jest --config jest.stylelint.config.js",
     "format:js": "prettier --write '**/*.js'",
     "format:css": "prettier --write --parser css '**/*.css'",
     "format:md": "prettier --write --parser markdown '**/*.md'",
@@ -158,7 +157,6 @@
     "jest-plugin-filename": "0.0.1",
     "jest-puppeteer": "3.8.0",
     "jest-runner-eslint": "0.7.1",
-    "jest-runner-stylelint": "1.0.0",
     "jest-silent-reporter": "0.1.1",
     "jest-validate": "23.6.0",
     "jest-watch-master": "1.0.0",
@@ -174,16 +172,6 @@
     "mri": "1.1.4",
     "omit-empty": "1.0.0",
     "postcss": "7.0.13",
-    "postcss-color-mod-function": "3.0.3",
-    "postcss-css-variables": "0.11.0",
-    "postcss-custom-media": "7.0.7",
-    "postcss-custom-properties": "8.0.9",
-    "postcss-discard-comments": "4.0.1",
-    "postcss-import": "12.0.1",
-    "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.5.0",
-    "postcss-reporter": "6.0.1",
-    "postcss-safe-parser": "4.0.1",
     "pptr-testing-library": "0.3.1",
     "prettier": "1.16.0",
     "puppeteer": "1.11.0",
@@ -202,16 +190,12 @@
     "rollup-plugin-json": "3.1.0",
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-node-resolve": "4.0.0",
-    "rollup-plugin-postcss": "1.6.3",
     "rollup-plugin-replace": "2.1.0",
     "rollup-plugin-url": "2.1.0",
     "serve": "10.1.1",
     "shelljs": "0.8.3",
     "storybook-readme": "4.0.5",
     "style-loader": "0.23.1",
-    "stylelint": "9.10.1",
-    "stylelint-config-standard": "18.2.0",
-    "stylelint-order": "2.0.0",
     "url-loader": "1.1.2",
     "webpack": "4.29.0",
     "webpack-cli": "3.2.1",
